@@ -10,45 +10,70 @@ HTMLWidgets.widget({
 
   type: 'output',
 
-  initialize: function(el, width, height) {
+  factory: function(el, width, height) {
     el.width = width;
     el.height = height;
-    return {};
-
-  },
-
-  renderValue: function(el, x) {
-    var rgl = new rglwidgetClass(), i, pel, player;
+    var firstRun = true,
+        rgl = new rglwidgetClass(),
+        onchangeselection = function(e) {
+          for (var i = 0; i < rgl.scene.crosstalk.sel_handle.length; i++)
+            if (e.sender != rgl.scene.crosstalk.sel_handle[i])
+      	      rgl.clearBrush(i);
+          rgl.selection(e, this, false);
+        },
+        onchangefilter = function(e) {
+          rgl.selection(e, this, true);
+        };
     
-    rgl.initialize(el, x);
-    rgl.initGL();
+    return { 
+      renderValue: function(x) {
+        var i, pel, player, group;
+        if (firstRun) {
+          if (typeof x.crosstalk != "undefined") {
+            x.crosstalk.group = groups = [].concat(x.crosstalk.group);
+            x.crosstalk.id = [].concat(x.crosstalk.id);
+            x.crosstalk.key = [].concat(x.crosstalk.key);
+            x.crosstalk.sel_handle = new Array(groups.length);
+            x.crosstalk.fil_handle = new Array(groups.length);
+            for (i = 0; i < groups.length; i++) {
+              x.crosstalk.sel_handle[i] = new crosstalk.SelectionHandle(groups[i], {rglId: x.crosstalk.id[i]});
+              x.crosstalk.sel_handle[i].on("change", onchangeselection);
+              x.crosstalk.fil_handle[i] = new crosstalk.FilterHandle(groups[i], {rglId: x.crosstalk.id[i]});
+              x.crosstalk.fil_handle[i].on("change", onchangefilter);
+            }
+          }
+          rgl.initialize(el, x);
+          rgl.initGL();
     
     /* We might have been called after (some of) the players were rendered.
        We need to make sure we respond to their initial values. */
 
-    if (typeof x.players !== "undefined") {
-      var players = [].concat(x.players);
-      for (i = 0; i < players.length; i++) {
-        pel = window[players[i]];
-        if (typeof pel !== "undefined") {
-          player = pel.rglPlayer;
-          if (typeof player !== "undefined" && !player.initialized) {
-            rgl.Player(pel, player);
-            player.initialized = true;
+          if (typeof x.players !== "undefined") {
+            var players = [].concat(x.players);
+            for (i = 0; i < players.length; i++) {
+              pel = window[players[i]];
+              if (typeof pel !== "undefined") {
+                player = pel.rglPlayer;
+                if (typeof player !== "undefined" && !player.initialized) {
+                  rgl.Player(pel, player);
+                  player.initialized = true;
+                }
+              } else
+               rgl.alertOnce("Controller '" + players[i] + "' not found.");
+            }
           }
-        } else
-          rgl.alertOnce("Controller '" + players[i] + "' not found.");
+          rgl.drag = 0;
+          firstRun = false;
+        }
+        rgl.drawScene();
+      },
+
+      resize: function(width, height) {
+        el.width = width;
+        el.height = height;
+        el.rglinstance.resize(el);
+        el.rglinstance.drawScene();
       }
-    }
-    rgl.drag = 0;
-    rgl.drawScene();
-  },
-
-  resize: function(el, width, height) {
-    el.width = width;
-    el.height = height;
-    el.rglinstance.resize(el);
-    el.rglinstance.drawScene();
+    };
   }
-
 });
